[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/m5x7/m5x7.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/m5x7/TextTheme.tres" type="Theme" id=3]
[ext_resource path="res://fonts/m5x7/SmallerTextTheme.tres" type="Theme" id=4]
[ext_resource path="res://fonts/m5x7/BigTextTheme.tres" type="Theme" id=5]
[ext_resource path="res://fonts/m5x7/SmallTextTheme.tres" type="Theme" id=6]
[ext_resource path="res://scenes/settings/Settings.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/CheatCoder/CheatCodeListener.gd" type="Script" id=8]
[ext_resource path="res://addons/CheatCoder/Presets/Konami.tres" type="Resource" id=10]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainButtons:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -136.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainButtons:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -136, 480 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExtraButtons:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1096, 520 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameInfo:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -80 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ModInfo:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 64 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Splashes:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -216, 96 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BottomButtons:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 408, 600 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GJAcc:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 448, -64 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CreditsContainer:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1096, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "onload"
tracks/0/type = "value"
tracks/0/path = NodePath("MainButtons:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -136, 480 ), Vector2( 8, 480 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExtraButtons:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1096, 520 ), Vector2( 944, 520 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameInfo:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, -80 ), Vector2( 8, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ModInfo:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -192, 65 ), Vector2( 8, 64 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Splashes:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -216, 97 ), Vector2( 8, 96 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BottomButtons:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 408, 600 ), Vector2( 408, 560 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GJAcc:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 448, -64 ), Vector2( 448, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CreditsContainer:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1096, 0 ), Vector2( 936, 0 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 544, 320 )

[node name="CreditsContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 8.0
margin_right = 152.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="LonelyPieCredit" type="Label" parent="CreditsContainer"]
margin_right = 144.0
margin_bottom = 13.0
theme = ExtResource( 4 )
text = "Evie made by: LonelyPie"
align = 2

[node name="ModCredit" type="Label" parent="CreditsContainer"]
margin_top = 17.0
margin_right = 144.0
margin_bottom = 30.0
theme = ExtResource( 4 )
text = "Mod made by: ModCreator"
align = 2

[node name="GameInfo" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = -80.0
margin_right = 216.0
margin_bottom = -4.0
__meta__ = {
"_edit_group_": true
}

[node name="GameName" type="Label" parent="GameInfo"]
margin_right = 126.0
margin_bottom = 76.0
theme = ExtResource( 5 )
text = "Evie"

[node name="GameVersion" type="Label" parent="GameInfo"]
margin_left = 130.0
margin_top = 23.0
margin_right = 206.0
margin_bottom = 53.0
theme = ExtResource( 6 )
text = "Version"

[node name="ModInfo" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 96.0

[node name="ModName" type="Label" parent="ModInfo"]
margin_top = 1.0
margin_right = 92.0
margin_bottom = 31.0
theme = ExtResource( 6 )
text = "ModName"

[node name="ModVersion" type="Label" parent="ModInfo"]
margin_left = 96.0
margin_top = 9.0
margin_right = 154.0
margin_bottom = 22.0
theme = ExtResource( 4 )
text = "ModVersion"

[node name="Splashes" type="Label" parent="."]
anchor_top = 0.12
anchor_bottom = 0.12
margin_left = -216.0
margin_top = 24.0
margin_right = -8.0
margin_bottom = 55.9998
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0.647059, 1, 1 )
text = "Splash Text"

[node name="Splash" type="Node" parent="."]

[node name="SplashCheatCode" type="Node" parent="Splash"]
script = ExtResource( 8 )
code = ExtResource( 10 )

[node name="MainButtons" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -120.0
margin_right = 134.0
margin_bottom = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="StartButton" type="Button" parent="MainButtons"]
margin_right = 126.0
margin_bottom = 38.0
focus_neighbour_top = NodePath("../QuitButton")
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
text = "PLAY"
flat = true
align = 0

[node name="OptionsButton" type="Button" parent="MainButtons"]
margin_top = 42.0
margin_right = 126.0
margin_bottom = 80.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "OPTIONS"
flat = true
align = 0

[node name="QuitButton" type="Button" parent="MainButtons"]
margin_top = 84.0
margin_right = 126.0
margin_bottom = 122.0
focus_neighbour_bottom = NodePath("../StartButton")
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "EXIT"
flat = true
align = 0

[node name="ExtraButtons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -80.0
margin_right = 144.001
__meta__ = {
"_edit_group_": true
}

[node name="ExtrasButton" type="Button" parent="ExtraButtons"]
margin_right = 136.0
margin_bottom = 38.0
theme = ExtResource( 3 )
disabled = true
text = "EXTRAS"
align = 2

[node name="CreditsButton" type="Button" parent="ExtraButtons"]
margin_top = 42.0
margin_right = 136.0
margin_bottom = 80.0
theme = ExtResource( 3 )
text = "CREDITS"
flat = true
clip_text = true
align = 2
icon_align = 1

[node name="BottomButtons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.0
margin_right = 136.0
margin_bottom = 40.0
theme = ExtResource( 6 )
custom_constants/separation = 13
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="GithubButton" type="Button" parent="BottomButtons"]
margin_left = 3.0
margin_right = 67.0
margin_bottom = 40.0
custom_colors/font_color_focus = Color( 0, 0.368627, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.368627, 1, 1 )
text = "Github"

[node name="BugsButton" type="Button" parent="BottomButtons"]
margin_left = 80.0
margin_right = 172.0
margin_bottom = 40.0
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "MM_BUGS"

[node name="WebsiteButton" type="Button" parent="BottomButtons"]
margin_left = 185.0
margin_right = 269.0
margin_bottom = 40.0
custom_colors/font_color_focus = Color( 0, 0.368627, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.368627, 1, 1 )
text = "MM_WEB"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Settings" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="GJAcc" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = -64.0
margin_right = 96.0
theme = ExtResource( 6 )
text = "GameJolt:
not connected"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/onload = SubResource( 2 )

[connection signal="cheat_activated" from="Splash/SplashCheatCode" to="." method="_on_SplashCheatCode_cheat_activated"]
[connection signal="pressed" from="MainButtons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainButtons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="ExtraButtons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="BottomButtons/GithubButton" to="." method="_on_GithubButton_pressed"]
[connection signal="pressed" from="BottomButtons/BugsButton" to="." method="_on_BugsButton_pressed"]
[connection signal="pressed" from="BottomButtons/WebsiteButton" to="." method="_on_WebsiteButton_pressed"]
